# Netune

./: .gitignore  2_windows.txt  CMakeLists.txt  LMusic_v2.0_架构设计方案..txt  PLAN_netease_rewrite.md  README.md  install.sh  文本文件.txt
.github/workflows/: build.yml
build_ci/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build_debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
data/: config.json
data/keybindings/: default.yaml
data/layouts/: default.yaml
data/themes/: catppuccin.yaml  default.yaml  dracula.yaml  netease_dark.yaml  netease_light.yaml
form others/: 6a5e3d527805987ba12a8f17_logo-change-final (1).diff  6a5e3d527805987ba12a8f17_theme-system-upgrade.diff
src/: app.cpp  app.h  main.cpp
src/compat/: dirent.h  pthread.h  strings.h  wcwidth_compat.h
src/core/: audio_output.h  audio_output_mgr.c  audio_output_mgr.h  cache_manager.c  cache_manager.h  cover.c  cover.h  decoder.h  decoder_manager.c  decoder_manager.h  event_bus.c  event_bus.h  lyric.h  music_source.c  music_source.h  music_source_manager.c  music_source_manager.h  playback_coordinator.c  playback_coordinator.c.part  playback_coordinator.h  playlist_manager.c  playlist_manager.h  search_manager.c  search_manager.h
src/infra/: config.c  config.h  log.c  log.h  ring_buffer.c  ring_buffer.h  thread_pool.c  thread_pool.h
src/plugins/audio_outputs/alsa/: alsa_output.c  alsa_plugin.c
src/plugins/audio_outputs/pulseaudio/: pulse_plugin.c
src/plugins/audio_outputs/sdl/: sdl_plugin.c
src/plugins/decoders/dr_libs/: flac_decoder.c  mp3_decoder.c  wav_decoder.c
src/plugins/decoders/dr_mp3/: mp3_decoder.c
src/plugins/decoders/ffmpeg/: ffmpeg_stream.c  ffmpeg_stream.h
src/plugins/lyrics/lrc/: lrc_parser.c  lrc_parser.h
src/plugins/music_sources/local/: local_source.c  local_source.h
src/plugins/music_sources/netease/: netease_api.c  netease_api.h  netease_source.c  netease_source.h  netease_stream.c  netease_stream.h
src/plugins/music_sources/netease/netease-cli/: go.mod  go.sum  main.go
src/ui/: keybindings.cpp  keybindings.h  layout_engine.cpp  layout_engine.h  state_store.cpp  state_store.h  theme.cpp  theme.h
src/ui/components/: group_list.cpp  group_list.h  help_screen.cpp  help_screen.h  login_screen.cpp  login_screen.h  lyric_panel.cpp  lyric_panel.h  player_controls.cpp  player_controls.h  search_bar.cpp  search_bar.h  song_list.cpp  song_list.h  spinner.cpp  spinner.h  status_bar.cpp  status_bar.h  theme_util.cpp  theme_util.h  top_bar.cpp  top_bar.h
